added changes for sonatype comments
Signed-off-by: mehab <meha.bhargava@citi.com>